@@ -1,7 +1,8 @@
 SVN
-* Fixed bug [#10417]: ruby-flymake had applying only if iflymake id
-  available. Raise a error if emacs-rails run on old version of Emacs
-  (less 22)
+* Apply patch [#10532], allows '-' to occur in the errror filepath (thanks Peter Williams)
+* Fixed bug [#10417]: ruby-flymake had applying only if flymake is
+  available.
+* Raise a error if emacs-rails run on old version of Emacs (less 22)
 * Updated view mode of "views"
 * Fixed bug [#10357]: code expansion shouldn't occur in comment lines.
 
