@@ -1,3 +1,7 @@
+2007-05-03  Dmitry Galinsky  <dima.exe@gmail.com>
+
+	* rails-test.el (rails-test:line-regexp): patch #10532, allows '-' to occur in the errror filepath (thanks Peter Williams)
+
 2007-04-27  Dmitry Galinsky  <dima.exe@gmail.com>
 
 	* rails.el: raise a error if emacs-rails run on old version of Emacs (less 22).
